--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>3.2.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>iscm</groupId>
@@ -27,7 +27,10 @@
         <url/>
     </scm>
     <properties>
-        <java.version>24</java.version>
+        <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <lombok.version>1.18.32</lombok.version> <!-- Añade esta propiedad para Lombok -->
     </properties>
     <dependencies>
         <dependency>
@@ -65,6 +68,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version> <!-- Usa la propiedad definida -->
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -90,7 +94,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.2.0</version>
+            <version>2.5.0</version>
         </dependency>
         <!--  https://mvnrepository.com/artifact/org.slf4j/slf4j-api  -->
         <dependency>
@@ -99,16 +103,11 @@
             <version>2.0.9</version>
         </dependency>
         <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.5.0</version>
-            <!--  Revisa siempre la última versión disponible  -->
-        </dependency>
+
         <!--  https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt  -->
         <dependency>
             <groupId>com.nimbusds</groupId>
@@ -118,6 +117,26 @@
     </dependencies>
 
     <build>
+        <resources>
+            <!-- Recurso default para todos los archivos, pero excluyendo los que no se deben filtrar -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <excludes>
+                    <exclude>application.properties</exclude>
+                    <exclude>**/*.p12</exclude>
+                </excludes>
+            </resource>
+            <!-- Recurso específico para application.properties y .p12, SIN FILTRADO -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <includes>
+                    <include>application.properties</include>
+                    <include>**/*.p12</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -127,8 +146,11 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version> <!-- Usa la propiedad definida -->
                         </path>
                     </annotationProcessorPaths>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -143,6 +165,7 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <!-- No se necesita un maven-resources-plugin explícito aquí si la sección <resources> ya lo maneja -->
         </plugins>
     </build>
     <repositories>
